[RLS] Fix transform ancestor for squashing layers.

Previously, there was an assumption that the transform ancestor of the compositing
container matched that of the squashed layer. This is wrong in the situation that
the compositing container has a transform.

Previously there was a check in the squashing code to skip some offsets if the
compositing container has a transform. This code was brittle, and started failing
once code was changed to omit composited scrolling offset from the compositing container.

Bug: 824811,646437

Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: Ia11af0d954065b31d38d61f8d4561ee3edd57e41
Reviewed-on: https://chromium-review.googlesource.com/979169
Reviewed-by: Tien-Ren Chen <trchen@chromium.org>
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545909}
Former-commit-id: 5fa574e760ef526149e29940e01f5a8483009748