third_party/WebKit/Source/core/paint/PaintLayer.h
@@ -852,7 +852,7 @@ class CORE_EXPORT PaintLayer : public DisplayItemClient {
 
   // Returned value does not include any composited scroll offset of
   // the transform ancestor.
-  LayoutPoint ComputeOffsetFromTransformedAncestor() const;
+  LayoutPoint ComputeOffsetFromAncestor(const PaintLayer& ancestor_layer) const;
 
   void DidUpdateScrollsOverflow();
 
